src/test/ui/reachable/expr_repeat.stderr
error: unreachable expression
  --> $DIR/expr_repeat.rs:20:25
   |
20 |     let x: [usize; 2] = [return; 2]; //~ ERROR unreachable
   |                         ^^^^^^^^^^^
   |
note: lint level defined here
  --> $DIR/expr_repeat.rs:14:9
   |
14 | #![deny(unreachable_code)]
   |         ^^^^^^^^^^^^^^^^

error: aborting due to previous error

